--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
   <body>
     <h1>Project Template</h1>
+    <ul id="teachers-list"></ul>
+        <section id="teachers-grid" class="grid">
 
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
